--- a/JaysLogger/build.gradle
+++ b/JaysLogger/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     testImplementation 'junit:junit:4.+'
     testImplementation "org.mockito:mockito-core:3.+"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
